Updated the style of sixth-proj card

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -45,6 +45,12 @@
   margin: 30px;
   padding: 10px;
 }
+.sixth-proj {
+  width: 18rem;
+  border: 2px solid #f5cb5c;
+  margin: 30px;
+  padding: 10px;
+}
 
 .project-header {
   background-color: #333533;
